package com.mindmate.backend.service.pattern;

public interface NotificationAdapter {
    void sendNotification(String recipient, String message);
}
